<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_search"
            android:icon="@drawable/ic_search_gray"
            android:title="@string/nav_search"/>

    <item
            android:id="@+id/navigation_bookmarks"
            android:icon="@drawable/ic_bookmark_border_gray"
            android:title="@string/nav_bookmarks"/>

    <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/artsendclo"
            android:title="@string/nav_home"/>

    <item
            android:id="@+id/navigation_profile"
            android:icon="@drawable/ic_person_outline_gray"
            android:title="@string/nav_profile"/>

    <item
            android:id="@+id/navigation_cart"
            android:icon="@drawable/ic_shopping_basket_gray"
            android:title="@string/nav_cart"/>

</menu>